fix <p> spacing

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,7 +1,12 @@
 h3 {
   font-weight: 300;
+  margin-bottom: 3px;
 }
 
 .about {
+  margin-bottom: 40px;
+}
+
+.about-descrip {
   margin-bottom: 25px;
 }
